deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-frontend-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: docker-frontend
  template:
    metadata:
      labels:
        app: docker-frontend
    spec:
      imagePullSecrets:
        - name: ghcr-login-secret
      containers:
        - name: docker-frontend
          image: ghcr.io/balintodab/docker-frontend:${IMAGE_TAG}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: docker-frontend-cluster-ip-service
spec:
  selector:
    app: docker-frontend
  type: ClusterIP
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: docker-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - nbastars.jcloud.jedlik.cloud
      secretName: docker-frontend-certificate
  rules:
    - host: nbastars.jcloud.jedlik.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-frontend-cluster-ip-service
                port:
                  number: 80
